# dummy_pkg

./: .gitignore  CMakeLists.txt  LICENSE  package.xml  readme.md
docs/: cli_args.md  cmake_settings.md  notes.md  params_and_yaml.md
launch/: apriltag_launch.py  dummy_launch.py  rosbag_launch.py  tf_launch.py
scripts/: bag_to_csv.py  read_bag.py
src/: dummy_node.cpp  lidar_node.cpp  transform_node.cpp
